hphp/test/zend/bad/class_constants_001.php
<?php

class test {
	const val = "string";
	const val2 = 1;
}

var_dump(test::val);
var_dump(test::val2);

var_dump(test::val3);

echo "Done\n";
?>